--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AnshikaRanjan.github.io/React-Task-6",
+  "homepage": "https://AnshikaRanjan.github.io/Website_1",
   "name": "work6",
   "version": "0.1.0",
   "private": true,
